# vFHE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
depends/: CMakeLists.txt
pvc/: CMakeLists.txt  bgv.cpp  client.cpp  utils.cpp
pvc/gadgets/: example_gadgets.cpp  gadgets.cpp  tests.cpp
pvc/tests/: test_gadgets.cpp
vfhe/: CMakeLists.txt  bgv.cpp  client.cpp  lattice_parameters.cpp  utils.cpp
vfhe/gadgets/: basic_gadgets.cpp  example_gadgets.cpp  pb_ciphertext.cpp  tests.cpp
vfhe/tests/: test_parameters.cpp
